# remonline

./: .env  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  settings.toml
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: BrandList.vue  BrandModal.vue  ClientModal.vue  DeviceModal.vue  DeviceTypeList.vue  DeviceTypeModal.vue  EmployeeForm.vue  EmployeeList.vue  InfoView.vue  LoginModal.vue  OrderDetail.vue  OrderList.vue  OrderPartModal.vue  OrganizationModal.vue  PartModal.vue  PartsList.vue  StatisticsView.vue  SupervisorRegisterModal.vue  WorkModal.vue
frontend/src/composables/: useAuth.js  useRolePermissions.js
frontend/src/constants/: roles.js
frontend/src/services/: api.js
frontend/src/utils/: debounce.js  errorHelpers.js  inputHelpers.js  orderHelpers.js
scripts/: entrypoint.sh  init-ssl.sh
src/: main.py  make_admin.py  make_supervisor.py
src/application/commands/: _helpers.py  _permissions.py  _stock_helpers.py  base_command_handler.py
src/application/errors/: _base.py  auth.py  client.py  employee.py  keycloak.py  part.py  vault.py
src/application/keycloak/: auth_managers.py
src/application/models/: auth_token.py  user_info.py
src/application/ports/: brand_reader.py  client_reader.py  device_reader.py  device_type_reader.py  employee_reader.py  error_log_writer.py  order_comment_reader.py  order_part_reader.py  order_reader.py  organization_reader.py  part_reader.py  payment_reader.py  statistics_reader.py  transaction.py  user_reader.py  work_reader.py
src/config/: _discovery.py  database.py  db_tables.py  exc_handlers.py  keycloak.py  logging.py  rate_limit.py  settings.py
src/config/ioc/: di.py
src/entities/: base_entity.py
templates/: act.html  receipt.html
tests/: test_client_service.py  test_command_handlers.py  test_employee_service.py  test_error_hierarchy.py  test_order_comment_service.py  test_order_service.py  test_part_service.py
(+207 files in other folders)
