[project]
name = "remonline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "dishka>=1.7.2",
    "fastapi>=0.128.1",
    "orjson>=3.11.7",
    "phonenumbers>=9.0.23",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-keycloak>=7.0.3",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
